[gd_scene load_steps=2 format=3 uid="uid://b00nn8gq4ybud"]

[ext_resource type="Script" uid="uid://bhbtth11qi5dn" path="res://src/database_generator.gd" id="1_tn6e1"]

[node name="database_generator" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_tn6e1")

[node name="panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.037
anchor_top = 0.222
anchor_right = 0.968
anchor_bottom = 0.946
offset_left = 0.375999
offset_top = -122.856
offset_right = -0.136108
offset_bottom = -478.008
grow_horizontal = 2
grow_vertical = 2

[node name="margin_container" type="MarginContainer" parent="panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="label" type="Label" parent="panel/margin_container"]
layout_mode = 2

[node name="panel_2" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.037
anchor_top = 0.222
anchor_right = 0.968
anchor_bottom = 0.946
offset_left = 0.375999
offset_top = 0.143982
offset_right = -0.136108
offset_bottom = -0.00799561
grow_horizontal = 2
grow_vertical = 2

[node name="margin_container" type="MarginContainer" parent="panel_2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="h_box_container" type="HBoxContainer" parent="panel_2/margin_container"]
layout_mode = 2
